# safeboy

./: .gitmodules  COPYING  Cargo.toml  README.md
safeboy/: Cargo.toml
safeboy/src/: gb.rs  instance.rs  lib.rs  model.rs  rgb_encoder.rs  types.rs
safeboy/src/gb/: event.rs
safeboy/src/instance/: instance_inner.rs
safeboy/src/instance/instance_inner/: callback_wrapper.rs  callbacks.rs
sameboy-sys/: Cargo.toml  README.md  build.rs  pregenerate_bindings.sh
sameboy-sys/SameBoy/: CMakeLists.txt
sameboy-sys/SameBoy/Core/: gb.c  gb.h
sameboy-sys/src/: bindings_pregenerated.rs  lib.rs
sameboy-sys/windows-hacks/: stdio.c  stdio.h
