[workspace]
members = ["safeboy", "sameboy-sys"]
resolver = "3"

[workspace.package]
version = "0.3.0-beta.6"
license = "GPL-3.0-only"
readme = "README.md"
edition = "2024"
repository = "https://github.com/SnowyMouse/safeboy"

[workspace.dependencies]

# Should be kept up-to-date with workspace.package.version
sameboy-sys = { version = "0.3.0-beta.6", path = "sameboy-sys", default-features = false }
