[package]
name = "safeboy"
description = "Safe Rust wrapper for SameBoy"
version = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
sameboy-sys = { workspace = true }

[features]
default = []
debugger = ["sameboy-sys/debugger"]
