[package]
name = "sameboy-sys"
description = "Rust bindings for SameBoy"
version = { workspace = true }
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
repository = { workspace = true }
include = [
    "src",
    "build.rs",
    "Cargo.toml",
    "README.md",

    # include SameBoy code
    "SameBoy/Core",
    "SameBoy/Windows",
    "SameBoy/version.mk",

    # also include SameBoy's license and readme
    "SameBoy/LICENSE",
    "SameBoy/README.md",
]

[features]
default = []
debugger = []

[build-dependencies]
cc = "1.2.45"
bindgen = "0.72.1"
regex = "1.12.2"
