[package]
name = "sameboy-sys"
description = "Rust bindings for SameBoy"
version = { workspace = true }
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
repository = { workspace = true }
include = [
    "src",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "windows-hacks",

    # include SameBoy code
    "SameBoy/Core",
    "SameBoy/Windows",
    "SameBoy/version.mk",

    # also include SameBoy's license and readme
    "SameBoy/LICENSE",
    "SameBoy/README.md",
]

[features]
default = []
debugger = []
bindgen = ["dep:bindgen"]

[build-dependencies]
cc = "1.2.45"
bindgen = { version = "0.72.1", optional = true }
regex = "1.12.2"
